<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ecran"
        android:layout_width="370dp"
        android:layout_height="117dp"
        android:background="@color/white"
        android:contentDescription="@string/zero"
        android:padding="10dp"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/res"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="378dp"
        android:layout_height="457dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/res"
        app:layout_constraintVertical_bias="0.578">

        <Button
            android:id="@+id/b12"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="40dp"
            android:text="@string/dive"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/gray_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b10"
            android:layout_width="82dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/mod"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.331"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/sup"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="200dp"
            android:text="@string/cinq"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.328"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b11"
            android:layout_width="82dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/mul"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.631"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="96dp"
            android:text="@string/trois"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b6"
            android:layout_width="80dp"
            android:layout_height="81dp"
            android:layout_marginBottom="200dp"
            android:text="@string/six"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="120dp"
            android:text="@string/n"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="96dp"
            android:text="@string/deux"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.328"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="96dp"
            android:text="@string/un"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="200dp"
            android:text="@string/qtr"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="120dp"
            android:text="@string/huit"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.328"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="120dp"
            android:text="@string/sept"
            android:textColor="@color/oper"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b0"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_marginBottom="40dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            app:backgroundTint="@color/oper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/egal"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_marginBottom="40dp"
            android:text="@string/equal"
            android:textColor="@color/white"
            app:backgroundTint="@color/oper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="96dp"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/oper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/div"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="200dp"
            android:text="@string/div"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/oper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/sus"
            android:layout_width="82dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/sous"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/oper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/res"
        android:layout_width="370dp"
        android:layout_height="68dp"
        android:layout_marginTop="132dp"
        android:background="@color/white"
        android:gravity="end"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>